--- a/src/body/body.css
+++ b/src/body/body.css
@@ -1,7 +1,5 @@
 .body-container {
-    padding: 40px 10px 10px 40px;
-    height: 90vh; /* Cap the height to 86% of the viewport height */
-    background-color: black;
+    padding: 1vh 1vw 1vw 4vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,19 +11,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 94vw; /* Make the container take the full width of .body-container */
     overflow-x: auto;
     margin-left: -6vh;
+    width: 94vw; /* Make the container take the full width of .body-container */
    
 
     /* Hide scrollbar for Webkit browsers (Chrome, Safari) */
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    /* Hide scrollbar for other browsers */
-    -ms-overflow-style: none; /* IE and Edge */
+    -webkit-overflow-scrolling: touch; /* Ensure smooth scrolling on mobile */
     scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
 }
 
 .upcoming-body {
@@ -69,7 +63,7 @@
 .body-container .title {
     color: white;
     font-size: 2.5vh;
-    margin-bottom: 1vh;
+    margin-bottom: -1vh;
     margin-right: 3.7vw; /* Adding padding-left instead */
 }
 
